リンク名と実態を一致させた

--- a/my-first.html
+++ b/my-first.html
@@ -46,7 +46,7 @@
 
     <h3>リンク集</h3>
     <ul>
-        <li><a href="./my-first-javascript.html">my-first.html</a></li>
+        <li><a href="./my-first-javascript.html">my-first-javascript.html</a></li>
         <li><a href="./assessment.html">都道府県診断</a></li>
     </ul>
 
