--- a/assessment.html
+++ b/assessment.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1>あなたにおすすめの都道府県</h1>
+    <h1>あなたにおすすめの都道府県を診断します</h1>
     <p>あなたの名前を入れてください</p>
     <input type="text" id="username" size="40" maxlength="20">
     <button id="assessment">診断する</button>
